2003-02-24  Jonathan Larmour  <jifl@eCosCentric.com>

	* doc/posix.sgml: Expunge EL/IX. Dead standard.
	* cdl/posix.cdl: Add doc link.

2003-02-13  Jonathan Larmour  <jifl@eCosCentric.com>

	* src/mutex.cxx: Include sched.hxx for scheduler lock/unlock primitives.
	Reported by Jani Monoses.

2003-02-10  Gary Thomas  <gary@mlbassoc.com>

	* tests/signal3.c (main): Reorg code so it builds with older GCC.

2003-01-31  Nick Garnett  <nickg@calivar.com>

	* src/time.cxx (alarm_action): Added call to
	cyg_posix_signal_sigwait() to wake up any sigwait()ing threads.

	* src/signal.cxx (cyg_posix_signal_sigwait): Added this function
	to export access to signal_sigwait conditional variable.
	(sigtimedwait): Added call to cyg_posix_timer_asr() to allow timer
	signals to be delivered here.

	* src/pprivate.h: Added prototype for cyg_posix_signal_sigwait().

	* cdl/posix.cdl:
	* tests/signal3.c: Added this program to test interaction of
	timers and signals, particularly sigwait(). Based on a test
	program from N.Suresh <nsuresh@cdotb.ernet.in>.

2003-01-20  Jonathan Larmour  <jifl@eCosCentric.com>

	* src/signal.cxx (cyg_posix_deliver_signals): silence warning.

	* src/time.cxx (cyg_timespec_to_ticks): Remove use of default arg in
	definition.

2003-01-18  Jonathan Larmour  <jifl@eCosCentric.com>

	* src/mqueue.cxx: Fix multi-line string literal warning.

2003-01-13  Jonathan Larmour  <jifl@eCosCentric.com>

	* doc/posix.sgml: Document them.

	* src/mqueue.cxx (mq_timedreceive): Make fully compliant by dealing
	with bogus timeouts.
	(mq_timedsend): Ditto.

2003-01-13  Dmitriy Korovkin  <dkorovkin@rambler.ru>

	* src/mqueue.cxx (mq_timedsend): New function. Implementing POSIX
	1003.1d draft definition.
	(mq_timedreceive): Ditto.

2002-12-10  Wade Jensen  <waj4news@cox.net>
2002-12-10  Jonathan Larmour  <jifl@eCosCentric.com>

	* src/mutex.cxx (pthread_cond_timedwait): Initialize clock converters
	only once ever.

2002-11-26  Nick Garnett  <nickg@ecoscentric.com>
